# SmartOps

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.claude/commands/: add-task.md  escalate.md  report.md  status.md  triage.md
.claude/prompts/: escalation_v1.md  orchestrator_v1.md  reporter_v1.md  scheduler_v1.md  triage_v1.md
.claude/skills/escalation/: SKILL.md
.claude/skills/report/: SKILL.md
.claude/skills/triage/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_agent.md
.github/workflows/: ci.yml  evals.yml
agents/: base_agent.py  escalation_agent.py  orchestrator.py  reporter_agent.py  scheduler_agent.py  triage_agent.py
api/: dependencies.py  job_store.py  main.py  schemas.py
api/routers/: agents.py  system.py  tasks.py
core/: agent_registry.py  config.py  models.py  task_store.py
docs/: adding-agents.md  agent-design.md  api.md  feature-index.md  onboarding.md
evals/: escalation_eval.py  reporter_eval.py  triage_eval.py
evals/fixtures/: escalation_cases.json  reporter_cases.json  triage_cases.json
scripts/: run_demo.py  seed_tasks.py
tests/: conftest.py  test_orchestrator.py  test_scheduler_agent.py  test_task_store.py  test_triage_agent.py
tools/: notify_tools.py  search_tools.py  task_tools.py
